# egdata-manifests-parser

./: .gitignore  Cargo.toml  README.md  error.mjs  json.manifest  manifest.manifest  package.json  pnpm-lock.yaml  test_fail.rs  tsconfig.json  vitest.config.mjs
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: error.rs  lib.rs  main.rs
src/parser/: reader.rs
src/types/: chunk.rs  file.rs  flags.rs  header.rs  json_manifest.rs  manifest.rs  meta.rs  mod.rs
test/: manifest-comprehensive.test.ts  napi.test.ts
test-manifests/: truncated-recoverable.manifest
