[package]
name = "egdata-manifests-parser"
version = "0.1.1"
edition = "2021"
description = "A parser for Epic Games manifest files"
license = "MIT"
repository = "https://github.com/nachoaldamav/egdata-manifests-parser"
readme = "README.md"
keywords = ["epic", "games", "manifest", "parser"]
categories = ["parsing", "game-development"]

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
miniz_oxide = "0.7.4"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
log = "0.4.27"
serde_json = "1.0.140"
