[package]
name = "egdata-manifests-parser"
version = "0.1.1"
edition = "2021"
description = "A parser for Epic Games manifest files"
license = "MIT"
repository = "https://github.com/nachoaldamav/egdata-manifests-parser"
readme = "README.md"
keywords = ["epic", "games", "manifest", "parser"]
categories = ["parsing", "game-development"]

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
miniz_oxide = "0.7.4"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
log = "0.4.27"
serde_json = "1.0.140"

# NAPI-RS dependencies
napi = { version = "3.0.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "3.0.0-beta.0"

[dev-dependencies]
napi = { version = "3.0.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
